# server-manager

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATABASE.md  LICENSE  NETWORKING.md  PLUGIN_API.md  README.md  ROADMAP.md  SECURITY.md  rustfmt.toml
crates/automation/: Cargo.toml
crates/automation/src/: lib.rs  scheduler.rs  tasks.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  manager.rs  watcher.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  events.rs  id.rs  lib.rs  profiles.rs  protocol.rs  traits.rs  types.rs
crates/db/: Cargo.toml
crates/db/src/: connection.rs  lib.rs  migrations.rs  models.rs  repositories.rs
crates/docker/: Cargo.toml
crates/docker/src/: lib.rs
crates/minecraft/: Cargo.toml
crates/minecraft/src/: lib.rs  logstream.rs  multi.rs  rcon.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: collector.rs  lib.rs  metrics.rs
crates/net/: Cargo.toml
crates/net/src/: client.rs  discovery.rs  key_manager.rs  lib.rs  session.rs  session_manager.rs  sftp.rs  shell.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: engine.rs  lib.rs  registry.rs
crates/reports/: Cargo.toml
crates/reports/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: crypto.rs  lib.rs  vault.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  local.rs  remote.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  bridge.rs  context.rs  icons.rs  lib.rs  shortcuts.rs  sound.rs  theme.rs
crates/ui/src/components/: console.rs  dashboard.rs  editor.rs  file_explorer.rs  mod.rs  monitors.rs  network_diag.rs  notifications.rs  server_list.rs  settings.rs  sidebar.rs  terminal.rs
crates/ui/src/layouts/: mod.rs  persistent.rs
crates/ui/src/terminal/: ansi.rs  grid.rs  mod.rs  widget.rs
crates/updater/: Cargo.toml
crates/updater/src/: github.rs  lib.rs
src/: main.rs
tests/: integration.rs
