[package]
name = "sm-automation"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
description = "Server Manager — task automation and scheduling"

[dependencies]
sm-core = { path = "../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
cron = "0.12"
