[package]
name = "sm-config"
version = "0.6.0"
edition = { workspace = true }
license = { workspace = true }
description = "Server Manager — configuration system with hot-reload"

[dependencies]
sm-core = { path = "../core" }
serde = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
notify = "6"
