[package]
name = "sm-core"
version = "0.6.0"
edition = { workspace = true }
license = { workspace = true }
description = "Server Manager — core types, traits, errors, and events"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
