[package]
name = "sm-db"
version = "0.6.0"
edition = { workspace = true }
license = { workspace = true }
description = "Server Manager — SQLite database layer with migrations"

[dependencies]
sm-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }
