[package]
name = "sm-docker"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
description = "Server Manager — Docker container and compose management"

[dependencies]
sm-core = { path = "../core" }
sm-net = { path = "../net" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
