[package]
name = "sm-minecraft"
version = "0.6.0"
edition = { workspace = true }
license = { workspace = true }
description = "Server Manager — Minecraft server management"

[dependencies]
sm-core = { path = "../core" }
sm-net = { path = "../net" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
base64 = "0.22"
