[package]
name = "sm-net"
version = "0.6.0"
edition = { workspace = true }
license = { workspace = true }
description = "Server Manager — networking: SSH, SFTP, RDP, discovery"

[dependencies]
sm-core = { path = "../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
regex = { workspace = true }
base64 = "0.22"
