[package]
name = "sm-plugins"
version = "0.6.0"
edition = { workspace = true }
license = { workspace = true }
description = "Server Manager — plugin system API"

[dependencies]
sm-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
