[package]
name = "sm-security"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
description = "Server Manager — encryption, credential vault, audit"

[dependencies]
sm-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
ring = { workspace = true }
zeroize = { workspace = true }
argon2 = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
rand = "0.8"
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"
