[package]
name = "sm-storage"
version = "0.6.0"
edition = { workspace = true }
license = { workspace = true }
description = "Server Manager — file management: local and remote (SFTP)"

[dependencies]
sm-core = { path = "../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
