[package]
name = "sm-ui"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
description = "Server Manager — egui-based GUI"

[dependencies]
sm-core = { path = "../core" }
sm-config = { path = "../config" }
sm-net = { path = "../net" }
sm-monitor = { path = "../monitor" }
sm-security = { path = "../security" }
sm-docker = { path = "../docker" }
sm-minecraft = { path = "../minecraft" }
sm-automation = { path = "../automation" }
sm-reports = { path = "../reports" }
sm-storage = { path = "../storage" }
egui = { workspace = true }
eframe = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
rodio = "0.19"
